fix: wrap in infowindow to stopp overflow

--- a/kod/scss/_infowindow.scss
+++ b/kod/scss/_infowindow.scss
@@ -173,6 +173,8 @@
 
 .o-identify-content {
   display: inline-block;
+  width: 100%;
+  overflow-wrap: anywhere;
 }
 
 .folded {
